tests/errors/layout/recursion/enum_variant_carrying_itself_by_value_errors.sim

        enum Loop { A: unit B: Loop }
        fn f() { entry: return }
        