tests/errors/layout/recursion/enum_variant_carrying_itself_by_value_errors.err.expected
error: at 2:14: [LAY-RecursiveTypeByValue] type 'Loop' is recursive by value (cycle: Loop). Break the cycle by wrapping a field/variant payload in a reference.
   |
 2 |         enum Loop { A: unit B: Loop }
   |              ^^^^
